# sso

./: .gitignore
sso-client/: .env.example  package-lock.json  package.json
sso-client/src/: index.js
sso-client/src/configurations/: base.json
sso-client/src/middlewares/: isAuthenticated.middleware.js  ssoRedirect.middleware.js
sso-client/src/utils/: configuration.util.js  verifyJwt.util.js
sso-server/: Cargo.toml  prometheus.yml
sso-server/src/: lib.rs  main.rs
sso-server/src/middlewares/: metrics_middleware.rs  mod.rs
sso-server/src/models/: mod.rs
sso-server/src/models/sso/: mod.rs  tokens_cache.rs
sso-server/src/routes/: mod.rs
sso-server/src/routes/v1/: mod.rs  verify_sso_token.rs
sso-server/src/routes/v1/login/: get.rs  mod.rs  post.rs
sso-server/src/templates/: index.html  login.html
sso-server/src/utils/: generate_jwt.rs  mod.rs  service_url.rs
