[package]
name = "sso-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tera = "1"
env_logger = "0.11"
serde={ version = "1.0", features = ["derive"] }
serde_urlencoded="0.7"
url="2.5"
actix-session={ version = "0.10", features = ["cookie-session"] }
uuid={version = "1.17", features = ["v4", "serde"]}
jsonwebtoken="9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dotenvy="0.15"
opentelemetry = { version = "0.29", features = ["metrics"] }
opentelemetry-prometheus = "0.29"
opentelemetry_sdk = { version = "0.29", features = ["metrics"] }
prometheus="0.14"
tracing="0.1"
tracing-subscriber="0.3"
futures-util = "0.3"



[dev-dependencies]